# lounger

./: CHANGES.md  README.md  pyproject.toml  seldom_vs_lounger.md
images/: framework.drawio
lounger/: __init__.py  cli.py  config.py  log.py  plugin.py  po.py  request.py
lounger/db_operation/: mssql_db.py  mysql_db.py  postgres_db.py  sqlite_db.py
lounger/project_temp/: conftest.py  test_api.py  test_web.py
lounger/pytest_extend/: params.py  screenshot.py
lounger/testdata/: random_func.py
lounger/utils/: __init__.py  cache.py  dependence.py
tests/: test_api_object.py  test_cache.py  test_cache_disk.py  test_cache_memory.py  test_data_params.py  test_db_mssql.py  test_db_mysql.py  test_db_postgresdb.py  test_db_sqlite3.py  test_dependence.py  test_log.py  test_marks_env.py  test_page_object.py  test_params_class_data.py  test_params_file_data.py  test_playwright.py  test_random_data.py  test_request.py
tests/data/: db.sqlite3
